--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <meta name="author" content="SD Loan and Leasing">
     <title>SD Loan and Leasing | Flexible Financing Solutions</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="canonical" href="https://shouko-komi.github.io/sd-loan-and-leasing-blog2/">
+    <meta name="google-site-verification" content="4UgUqlItb0H5zv9QRVscKUGBxVDO-Tuljj_7zgeGOCM" />
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y5WGHL09DZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Y5WGHL09DZ');
+</script>
 </head>
 <body>
     <header>
